--- a/rotjs/clorog/public/index.html
+++ b/rotjs/clorog/public/index.html
@@ -24,9 +24,12 @@
 </style>
 
 <body>
-  <!-- <div id="canvas-holder" style="text-align: center; width: 100%;">
-      <canvas id="game-canvas" width="800" height="600"></canvas>
-    </div> -->
+  <div id="canvas-holder" style="text-align: center; width: 100%;">
+    
+  </div>
+  <div>
+    qpower
+  </div>
 
   <script src="js/main.js" type="text/javascript"></script>
 </body>
