--- a/pixijs/rorisboard/public/index.html
+++ b/pixijs/rorisboard/public/index.html
@@ -3,9 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <title>rorisboard</title>
+    <style>
+      canvas {
+        position: absolute;
+        top: 0;
+        left: 0;
+      }
+    </style>
   </head>
   <body>
-    <div id="root"></div>
     <script src="/js/main.js"></script>
   </body>
 </html>
